--- a/src/app/core/components/card/card.component.html
+++ b/src/app/core/components/card/card.component.html
@@ -1,13 +1,144 @@
-<div class="flex justify-center items-center min-h-screen bg-blue-50">
+<div class="flex justify-center items-center min-h-screen w-screen bg-blue-50">
     <div class="h-auto w-96 bg-white p-12 rounded-lg">
-        <p class="text-xl m-3 text-center font-semibold">Payment Details</p>
-        <div class="input_text mt-6 relative"> <input type="text" class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b " placeholder="John Row" /> <span class="absolute left-0 text-sm -top-4">Cardholder Name</span> <i class="absolute left-2 top-4 text-gray-400 fa fa-user"></i> </div>
-        <div class="input_text mt-8 relative"> <input type="text" class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b " placeholder="0000 0000 0000 0000" data-slots="0" data-accept="\d" size="19" /> <span class="absolute left-0 text-sm -top-4">Card Number</span> <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-credit-card"></i> </div>
-        <div class="mt-8 flex gap-5 ">
-            <div class="input_text relative w-full"> <input type="text" class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b " placeholder="mm/yyyy" data-slots="my" /> <span class="absolute left-0 text-sm -top-4">Expiry</span> <i class="absolute left-2 top-4 text-gray-400 fa fa-calendar-o"></i> </div>
-            <div class="input_text relative w-full"> <input type="text" class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b " placeholder="000" data-slots="0" data-accept="\d" size="3" /> <span class="absolute left-0 text-sm -top-4">CVV</span> <i class="absolute left-2 top-4 text-gray-400 fa fa-lock"></i> </div>
-        </div>
-        <p class="text-lg text-center mt-4 text-gray-600 font-semibold">Payment amount:$12.98</p>
-        <div class="flex justify-center mt-4"> <button class="outline-none pay h-12 bg-orange-600 text-white mb-3 hover:bg-orange-700 rounded-lg w-1/2 cursor-pointer transition-all">Pay</button> </div>
+        <button
+            (click)="close()"
+            type="button"
+            class="ml-[100%] text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+            data-modal-hide="defaultModal"
+            tabindex="1"
+        >
+            <svg
+                class="w-3 h-3"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 14"
+            >
+                <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+                ></path>
+            </svg>
+            <span class="sr-only">Close modal</span>
+        </button>
+        <h3
+            class="text-xl m-3 text-center font-semibold"
+            id="cardTitle"
+            tabindex="0"
+            aria-live="polite"
+            aria-atomic="true"
+        >
+            Payment Details
+        </h3>
+        <form [formGroup]="paymentForm" (ngSubmit)="onPay()">
+            <div class="mt-6">
+                <div
+                    class="input_text relative"
+                    [ngClass]="{
+                        'error': paymentForm.get('cardholderName')?.invalid && paymentForm.get('cardholderName')?.touched
+                    }"
+                >
+                    <label for="cardholderName" class="font-semibold text-gray-800">Cardholder Name</label>
+                    <input
+                        type="text"
+                        id="cardholderName"
+                        class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
+                        placeholder="John Doe"
+                        formControlName="cardholderName"
+                        aria-required="true"
+                        tabindex="1"
+                        aria-describedby="cardholderNameError"
+                        #cardholderNameInput
+                    />
+                    <i class="absolute left-2 top-4 text-gray-400 fa fa-user"></i>
+                </div>
+                
+            </div>
+            <div class="mt-8">
+                <div
+                    class="input_text relative"
+                    [ngClass]="{
+                        'error': paymentForm.get('cardNumber')?.invalid && paymentForm.get('cardNumber')?.touched
+                    }"
+                >
+                    <label for="cardNumber" class="font-semibold text-gray-800">Card Number</label>
+                    <input
+                        type="text"
+                        id="cardNumber"
+                        class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
+                        placeholder="0000 0000 0000 0000"
+                        formControlName="cardNumber"
+                        aria-required="true"
+                        maxlength="16"
+                        tabindex="2"
+                        aria-describedby="cardNumberError"
+                        #cardNumberInput
+                    />
+                    <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-credit-card"></i>
+                </div>
+                
+            </div>
+            <div class="mt-8">
+                <div
+                    class="input_text relative"
+                    [ngClass]="{
+                        'error': paymentForm.get('expiryDate')?.invalid && paymentForm.get('expiryDate')?.touched
+                    }"
+                >
+                    <label for="expiryDate" class="font-semibold text-gray-800">Expiry Date</label>
+                    <input
+                        type="text"
+                        id="expiryDate"
+                        class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
+                        placeholder="MM/YY"
+                        formControlName="expiryDate"
+                        aria-required="true"
+                        tabindex="3"
+                        aria-describedby="expiryDateError"
+                        #expiryDateInput
+                    />
+                    <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-calendar"></i>
+                </div>
+                
+            </div>
+            <div class="mt-8">
+                <div
+                    class="input_text relative"
+                    [ngClass]="{
+                        'error': paymentForm.get('cvv')?.invalid && paymentForm.get('cvv')?.touched
+                    }"
+                >
+                    <label for="cvv" class="font-semibold text-gray-800">CVV</label>
+                    <input
+                        type="text"
+                        id="cvv"
+                        class="h-12 pl-7 outline-none px-2 focus:border-blue-900 transition-all w-full border-b"
+                        placeholder="123"
+                        formControlName="cvv"
+                        aria-required="true"
+                        maxlength="3"
+                        tabindex="4"
+                        aria-describedby="cvvError"
+                        #cvvInput
+                    />
+                    <i class="absolute left-2 top-[14px] text-gray-400 text-sm fa fa-lock"></i>
+                </div>
+                
+            </div>
+            <p tabindex="5" class="text-lg text-center mt-4 text-gray-600 font-semibold">
+                Payment Amount: {{ selectedAmount }} $
+            </p>
+            <div class="flex justify-center mt-4">
+                <button tabindex="6" (click)="onPay()"
+                    type="submit"
+                    class="outline-none pay h-12 bg-orange-600 text-white mb-3 hover:bg-orange-700 rounded-lg w-1/2 cursor-pointer transition-all"
+                >
+                    Pay
+                </button>
+            </div>
+        </form>
     </div>
 </div>
