--- a/src/app/core/components/card/success/success.component.html
+++ b/src/app/core/components/card/success/success.component.html
@@ -1,66 +1,79 @@
-<p>success works!</p>
 <!-- Modal -->
 <div
   data-te-modal-init
+  data-te-modal-body-ref
   data-te-backdrop="false"
   class="static left-0 top-0 z-[1055] block h-full w-full overflow-y-auto overflow-x-hidden outline-none"
   id="exampleModalComponents"
   tabindex="-1"
-  aria-labelledby="exampleModalComponentsLabel"
-  aria-hidden="true">
+  aria-labelledby="successTitle"
+>
   <div
     data-te-modal-dialog-ref
-    class="pointer-events-none relative w-auto opacity-100 transition-all duration-300 ease-in-out min-[576px]:mx-auto min-[576px]:my-7 min-[576px]:max-w-[500px]">
+    class="pointer-events-none relative w-auto opacity-100 transition-all duration-300 ease-in-out min-[576px]:mx-auto min-[576px]:my-7 min-[576px]:max-w-[500px]"
+  >
     <div
-      class="min-[576px]:shadow-[0_0.5rem_1rem_rgba(#000, 0.15)] pointer-events-auto relative flex w-full flex-col rounded-md border-none bg-white bg-clip-padding text-current shadow-lg outline-none dark:bg-neutral-600">
+      class="min-[576px]:shadow-[0_0.5rem_1rem_rgba(#000, 0.15)] pointer-events-auto relative flex w-full flex-col rounded-md border-none bg-white bg-clip-padding text-current shadow-lg outline-none dark:bg-neutral-600"
+    >
       <div
-        class="flex flex-shrink-0 items-center justify-between rounded-t-md border-b-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50">
+        class="flex flex-shrink-0 items-center justify-between rounded-t-md border-b-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50"
+      >
         <h5
           class="text-xl font-medium leading-normal text-neutral-800 dark:text-neutral-200"
-          id="exampleModalComponentsLabel">
-          Modal title
+          id="successTitle"
+          tabindex="0"
+        >
+          Payment Success
         </h5>
         <button
           type="button"
           class="box-content rounded-none border-none hover:no-underline hover:opacity-75 focus:opacity-100 focus:shadow-none focus:outline-none"
           data-te-modal-dismiss
-          aria-label="Close">
+          aria-label="Close"
+          (click)="onCloseModal()"
+          tabindex="1"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="h-6 w-6">
+            class="h-6 w-6"
+          >
             <path
               stroke-linecap="round"
               stroke-linejoin="round"
-              d="M6 18L18 6M6 6l12 12" />
+              d="M6 18L18 6M6 6l12 12"
+            />
           </svg>
         </button>
       </div>
       <div class="relative flex-auto p-4" data-te-modal-body-ref>
-        Modal body text goes here.
+        <div class="relative flex-auto p-4" data-te-modal-body-ref>
+          <div class="text-center text-success">
+            <i class="bi bi-check-circle-fill text-green-500" style="font-size: 3rem"></i>
+          </div>
+          <p class="text-center" tabindex="2" aria-label="Thank you for your payment. Your transaction was successful.">
+            Thank you for your payment. Your transaction was successful.
+          </p>
+        </div>
       </div>
       <div
-        class="flex flex-shrink-0 flex-wrap items-center justify-end rounded-b-md border-t-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50">
+        class="flex flex-shrink-0 flex-wrap items-center justify-end rounded-b-md border-t-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50"
+      >
         <button
           type="button"
           class="inline-block rounded bg-primary-100 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-primary-700 transition duration-150 ease-in-out hover:bg-primary-accent-100 focus:bg-primary-accent-100 focus:outline-none focus:ring-0 active:bg-primary-accent-200"
           data-te-modal-dismiss
           data-te-ripple-init
-          data-te-ripple-color="light">
+          data-te-ripple-color="light"
+          (click)="onCloseModal()"
+          tabindex="3"
+        >
           Close
-        </button>
-        <button
-          type="button"
-          class="ml-1 inline-block rounded bg-primary px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]"
-          data-te-ripple-init
-          data-te-ripple-color="light">
-          Save changes
         </button>
       </div>
     </div>
   </div>
 </div>
-
